src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_bitwise_ops.snap
---
source: src/pagoda/parser.rs
expression: program.stmts
---
[
    Block {
        stmts: [
            Expr {
                expr: Binary {
                    op: BitOr,
                    left: Binary {
                        op: BitAnd,
                        left: Unary {
                            op: BitNot,
                            expr: IntLiteral {
                                value: 1,
                                span: Span {
                                    start: 2,
                                    end: 3,
                                    literal: "1",
                                },
                            },
                            span: Span {
                                start: 1,
                                end: 3,
                                literal: "~1",
                            },
                        },
                        right: IntLiteral {
                            value: 2,
                            span: Span {
                                start: 6,
                                end: 7,
                                literal: "2",
                            },
                        },
                        span: Span {
                            start: 1,
                            end: 7,
                            literal: "~1&2",
                        },
                    },
                    right: Binary {
                        op: BitXor,
                        left: IntLiteral {
                            value: 3,
                            span: Span {
                                start: 10,
                                end: 11,
                                literal: "3",
                            },
                        },
                        right: IntLiteral {
                            value: 4,
                            span: Span {
                                start: 14,
                                end: 15,
                                literal: "4",
                            },
                        },
                        span: Span {
                            start: 10,
                            end: 15,
                            literal: "3^4",
                        },
                    },
                    span: Span {
                        start: 1,
                        end: 15,
                        literal: "~1&2|3^4",
                    },
                },
                span: Span {
                    start: 1,
                    end: 15,
                    literal: "~1&2|3^4",
                },
            },
        ],
        span: Span {
            start: 0,
            end: 16,
            literal: "{~1&2|3^4}",
        },
    },
]
