src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_comparisons.snap
---
source: src/pagoda/parser.rs
expression: program.exprs
---
[
    Binary {
        op: Eq,
        left: Binary {
            op: Add,
            left: IntLiteral {
                value: 1,
                span: Span {
                    start: 0,
                    end: 1,
                    literal: "1",
                },
            },
            right: IntLiteral {
                value: 2,
                span: Span {
                    start: 2,
                    end: 3,
                    literal: "2",
                },
            },
            span: Span {
                start: 0,
                end: 3,
                literal: "1+2",
            },
        },
        right: Binary {
            op: Mul,
            left: IntLiteral {
                value: 3,
                span: Span {
                    start: 5,
                    end: 6,
                    literal: "3",
                },
            },
            right: IntLiteral {
                value: 4,
                span: Span {
                    start: 7,
                    end: 8,
                    literal: "4",
                },
            },
            span: Span {
                start: 5,
                end: 8,
                literal: "3*4",
            },
        },
        span: Span {
            start: 0,
            end: 8,
            literal: "1+2==3*4",
        },
    },
]
