src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_compound_assignments.snap
---
source: src/pagoda/parser.rs
expression: program.stmts
---
[
    Block {
        stmts: [
            Let {
                name: "a",
                expr: IntLiteral {
                    value: 1,
                    span: Span {
                        start: 10,
                        end: 11,
                        literal: "1",
                    },
                },
                span: Span {
                    start: 2,
                    end: 11,
                    literal: "let=a1",
                },
            },
            Expr {
                expr: CompoundAssign {
                    name: "a",
                    op: Add,
                    value: IntLiteral {
                        value: 2,
                        span: Span {
                            start: 18,
                            end: 19,
                            literal: "2",
                        },
                    },
                    span: Span {
                        start: 13,
                        end: 19,
                        literal: "a+=2",
                    },
                },
                span: Span {
                    start: 13,
                    end: 19,
                    literal: "a+=2",
                },
            },
            Expr {
                expr: CompoundAssign {
                    name: "a",
                    op: Sub,
                    value: IntLiteral {
                        value: 3,
                        span: Span {
                            start: 26,
                            end: 27,
                            literal: "3",
                        },
                    },
                    span: Span {
                        start: 21,
                        end: 27,
                        literal: "a-=3",
                    },
                },
                span: Span {
                    start: 21,
                    end: 27,
                    literal: "a-=3",
                },
            },
            Expr {
                expr: CompoundAssign {
                    name: "a",
                    op: Mul,
                    value: IntLiteral {
                        value: 4,
                        span: Span {
                            start: 34,
                            end: 35,
                            literal: "4",
                        },
                    },
                    span: Span {
                        start: 29,
                        end: 35,
                        literal: "a*=4",
                    },
                },
                span: Span {
                    start: 29,
                    end: 35,
                    literal: "a*=4",
                },
            },
            Expr {
                expr: CompoundAssign {
                    name: "a",
                    op: Div,
                    value: IntLiteral {
                        value: 5,
                        span: Span {
                            start: 42,
                            end: 43,
                            literal: "5",
                        },
                    },
                    span: Span {
                        start: 37,
                        end: 43,
                        literal: "a/=5",
                    },
                },
                span: Span {
                    start: 37,
                    end: 43,
                    literal: "a/=5",
                },
            },
        ],
        span: Span {
            start: 0,
            end: 45,
            literal: "{a/=5}",
        },
    },
]
