src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_enum_definition.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [],
    enums: [
        EnumDef {
            is_public: false,
            name: "Option",
            variants: [
                EnumVariant {
                    name: "Some",
                    data: Some(
                        "i64",
                    ),
                    span: Span {
                        start: 14,
                        end: 23,
                        literal: "",
                    },
                },
                EnumVariant {
                    name: "None",
                    data: None,
                    span: Span {
                        start: 25,
                        end: 29,
                        literal: "",
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 31,
                literal: "",
            },
        },
    ],
    functions: [],
    stmts: [],
    span: Span {
        start: 0,
        end: 31,
        literal: "",
    },
}
