src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_enum_literal_with_data.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [],
    enums: [],
    functions: [],
    stmts: [
        Block {
            stmts: [
                Expr {
                    expr: QualifiedCall {
                        module: "Option",
                        name: "Some",
                        args: [
                            IntLiteral {
                                value: 42,
                                span: Span {
                                    start: 15,
                                    end: 17,
                                    literal: "42",
                                },
                            },
                        ],
                        span: Span {
                            start: 2,
                            end: 18,
                            literal: "Option::Some(...)",
                        },
                    },
                    span: Span {
                        start: 2,
                        end: 18,
                        literal: "Option::Some(...)",
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 20,
                literal: "{Option::Some(...)}",
            },
        },
    ],
    span: Span {
        start: 0,
        end: 20,
        literal: "",
    },
}
