src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_enum_with_multiple_variants.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [],
    enums: [
        EnumDef {
            is_public: false,
            name: "Result",
            variants: [
                EnumVariant {
                    name: "Ok",
                    data: Some(
                        "i64",
                    ),
                    span: Span {
                        start: 14,
                        end: 21,
                        literal: "",
                    },
                },
                EnumVariant {
                    name: "Err",
                    data: Some(
                        "string",
                    ),
                    span: Span {
                        start: 23,
                        end: 34,
                        literal: "",
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 36,
                literal: "",
            },
        },
    ],
    functions: [],
    stmts: [],
    span: Span {
        start: 0,
        end: 36,
        literal: "",
    },
}
