src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_for_loop.snap
---
source: src/pagoda/parser.rs
expression: program.stmts
---
[
    Block {
        stmts: [
            For {
                init: Some(
                    Let {
                        name: "i",
                        ty: None,
                        expr: IntLiteral {
                            value: 0,
                            span: Span {
                                start: 15,
                                end: 16,
                                literal: "0",
                            },
                        },
                        span: Span {
                            start: 7,
                            end: 16,
                            literal: "let i = 0",
                        },
                    },
                ),
                cond: Some(
                    Binary {
                        op: Lt,
                        left: Var {
                            name: "i",
                            span: Span {
                                start: 18,
                                end: 19,
                                literal: "i",
                            },
                        },
                        right: IntLiteral {
                            value: 1,
                            span: Span {
                                start: 22,
                                end: 23,
                                literal: "1",
                            },
                        },
                        span: Span {
                            start: 18,
                            end: 23,
                            literal: "i<1",
                        },
                    },
                ),
                post: Some(
                    Assign {
                        name: "i",
                        value: Binary {
                            op: Add,
                            left: Var {
                                name: "i",
                                span: Span {
                                    start: 29,
                                    end: 30,
                                    literal: "i",
                                },
                            },
                            right: IntLiteral {
                                value: 1,
                                span: Span {
                                    start: 33,
                                    end: 34,
                                    literal: "1",
                                },
                            },
                            span: Span {
                                start: 29,
                                end: 34,
                                literal: "i+1",
                            },
                        },
                        span: Span {
                            start: 25,
                            end: 34,
                            literal: "i=i+1",
                        },
                    },
                ),
                body: Block {
                    stmts: [
                        Expr {
                            expr: IntLiteral {
                                value: 2,
                                span: Span {
                                    start: 38,
                                    end: 39,
                                    literal: "2",
                                },
                            },
                            span: Span {
                                start: 38,
                                end: 39,
                                literal: "2",
                            },
                        },
                    ],
                    span: Span {
                        start: 36,
                        end: 42,
                        literal: "{2}",
                    },
                },
                span: Span {
                    start: 2,
                    end: 42,
                    literal: "for{2}",
                },
            },
            Expr {
                expr: IntLiteral {
                    value: 3,
                    span: Span {
                        start: 44,
                        end: 45,
                        literal: "3",
                    },
                },
                span: Span {
                    start: 44,
                    end: 45,
                    literal: "3",
                },
            },
        ],
        span: Span {
            start: 0,
            end: 47,
            literal: "{3}",
        },
    },
]
