src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_function_with_args.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [],
    enums: [],
    functions: [
        Function {
            is_public: false,
            name: "add",
            params: [
                FunctionParam {
                    name: "a",
                    ty: Some(
                        "i64",
                    ),
                    span: Span {
                        start: 7,
                        end: 13,
                        literal: "",
                    },
                },
                FunctionParam {
                    name: "b",
                    ty: Some(
                        "i64",
                    ),
                    span: Span {
                        start: 15,
                        end: 21,
                        literal: "",
                    },
                },
            ],
            return_type: None,
            body: Block {
                stmts: [
                    Expr {
                        expr: Binary {
                            op: Add,
                            left: Var {
                                name: "a",
                                span: Span {
                                    start: 25,
                                    end: 26,
                                    literal: "a",
                                },
                            },
                            right: Var {
                                name: "b",
                                span: Span {
                                    start: 29,
                                    end: 30,
                                    literal: "b",
                                },
                            },
                            span: Span {
                                start: 25,
                                end: 30,
                                literal: "a+b",
                            },
                        },
                        span: Span {
                            start: 25,
                            end: 30,
                            literal: "a+b",
                        },
                    },
                ],
                span: Span {
                    start: 23,
                    end: 32,
                    literal: "{a+b}",
                },
            },
            span: Span {
                start: 0,
                end: 32,
                literal: "fnadd({a+b}",
            },
        },
    ],
    stmts: [
        Block {
            stmts: [
                Expr {
                    expr: Call {
                        name: "add",
                        args: [
                            IntLiteral {
                                value: 2,
                                span: Span {
                                    start: 39,
                                    end: 40,
                                    literal: "2",
                                },
                            },
                            IntLiteral {
                                value: 3,
                                span: Span {
                                    start: 41,
                                    end: 42,
                                    literal: "3",
                                },
                            },
                        ],
                        span: Span {
                            start: 35,
                            end: 43,
                            literal: "add(2,3)",
                        },
                    },
                    span: Span {
                        start: 35,
                        end: 43,
                        literal: "add(2,3)",
                    },
                },
            ],
            span: Span {
                start: 33,
                end: 45,
                literal: "{add(2,3)}",
            },
        },
    ],
    span: Span {
        start: 33,
        end: 45,
        literal: "",
    },
}
