src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_if_else_statement.snap
---
source: src/pagoda/parser.rs
expression: program.stmts
---
[
    Block {
        stmts: [
            If {
                cond: IntLiteral {
                    value: 1,
                    span: Span {
                        start: 6,
                        end: 7,
                        literal: "1",
                    },
                },
                then_branch: Block {
                    stmts: [
                        Expr {
                            expr: IntLiteral {
                                value: 2,
                                span: Span {
                                    start: 11,
                                    end: 12,
                                    literal: "2",
                                },
                            },
                            span: Span {
                                start: 11,
                                end: 12,
                                literal: "2",
                            },
                        },
                    ],
                    span: Span {
                        start: 9,
                        end: 14,
                        literal: "{2}",
                    },
                },
                else_branch: Some(
                    Block {
                        stmts: [
                            Expr {
                                expr: IntLiteral {
                                    value: 3,
                                    span: Span {
                                        start: 22,
                                        end: 23,
                                        literal: "3",
                                    },
                                },
                                span: Span {
                                    start: 22,
                                    end: 23,
                                    literal: "3",
                                },
                            },
                        ],
                        span: Span {
                            start: 20,
                            end: 25,
                            literal: "{3}",
                        },
                    },
                ),
                span: Span {
                    start: 2,
                    end: 25,
                    literal: "if(1){2}{3}",
                },
            },
        ],
        span: Span {
            start: 0,
            end: 27,
            literal: "{if(1){2}{3}}",
        },
    },
]
